--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ idna==3.3
 lockfile==0.12.2
 luigi==3.1.0
 numpy==1.23.0
+pandas==1.4.3
 Pillow==9.2.0
 python-daemon==2.3.0
 python-dateutil==2.8.2
+pytz==2022.1
 requests==2.28.1
 six==1.16.0
 tenacity==8.0.1
